@@ -47,6 +47,7 @@
       <li><a href="rdoc/classes/Roda/RodaPlugins/RouteBlockArgs.html">route_block_args</a>: Controls which arguments are passed to the route block.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/RunAppendSlash.html">run_append_slash</a>: Makes r.run use &quot;/&quot; instead of &quot;&quot; for app's PATH_INFO</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/RunHandler.html">run_handler</a>: Allows for modifying rack response arrays when using r.run, and continuing routing for 404 responses.</li>
+      <li><a href="rdoc/classes/Roda/RodaPlugins/RunRequireSlash.html">run_require_slash</a>: Skip dispatching to another application if PATH_INFO for dispatch would violate Rack SPEC</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/StaticRouting.html">static_routing</a>: Adds class level static routing methods, for maximum performance when handling static routes (routes without placeholders).</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/StatusHandler.html">status_handler</a>: Adds status_handler method for handling responses without bodies for a given status code.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/TypeRouting.html">type_routing</a>: Route based on path extensions and Accept headers.</li>
